k8s/manifests/services/apseline/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apseline-api
  namespace: apps
  labels:
    app.kubernetes.io/name: apseline-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: apseline-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apseline-api
    spec:
      containers:
        - name: apseline-api
          image: ghcr.io/sentient-soup/apseline-api:master
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
