k8s/manifests/services/apseline/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: apps
  labels:
    app.kubernetes.io/name: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app.kubernetes.io/name: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: apps
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/version: "17"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: phis-standard-psql
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: Always
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
