k8s/manifests/services/apseline/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apseline-api
  namespace: apps
  labels:
    app.kubernetes.io/name: apseline-api
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.223
  allocateLoadBalancerNodePorts: false
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: apseline-api

---
apiVersion: v1
kind: Service
metadata:
  name: apseline-web
  namespace: apps
  labels:
    app.kubernetes.io/name: apseline-web
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.225
  allocateLoadBalancerNodePorts: false
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: apseline-web
